[project]
name = "model-docker-image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "opencv-python-headless>=4.13.0.90",
    "ultralytics>=8.4.7",
    "rknn-toolkit-lite2==2.3.0",
    "pynetworktables"
]
