[project]
name = "model-docker-image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# We narrow this to ensure no 3.10+ dependencies are picked up
requires-python = ">=3.9"
dependencies = [
    "onnx",
    "onnxruntime",
    "opencv-python-headless",
    "ultralytics",
    "pynetworktables"
]
